--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -11,7 +11,7 @@
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
 
@@ -29,6 +29,13 @@
     <main>
         <h1>Teste de imagem de fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio minus molestiae quam praesentium expedita quas blanditiis eius odit fugiat a maiores quisquam delectus, eligendi cumque provident voluptas aperiam perferendis magnam? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus laudantium harum laborum ex! Deleniti omnis vel, ipsam dignissimos adipisci doloribus quia nemo. Reiciendis maiores, rem molestiae totam non itaque illo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta quia nesciunt aspernatur nobis sit nostrum esse doloremque enim voluptas tenetur odio atque porro iusto, animi debitis natus labore neque consectetur?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio minus molestiae quam praesentium expedita quas blanditiis eius odit fugiat a maiores quisquam delectus, eligendi cumque provident voluptas aperiam perferendis magnam? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus laudantium harum laborum ex! Deleniti omnis vel, ipsam dignissimos adipisci doloribus quia nemo. Reiciendis maiores, rem molestiae totam non itaque illo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta quia nesciunt aspernatur nobis sit nostrum esse doloremque enim voluptas tenetur odio atque porro iusto, animi debitis natus labore neque consectetur?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio minus molestiae quam praesentium expedita quas blanditiis eius odit fugiat a maiores quisquam delectus, eligendi cumque provident voluptas aperiam perferendis magnam? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus laudantium harum laborum ex! Deleniti omnis vel, ipsam dignissimos adipisci doloribus quia nemo. Reiciendis maiores, rem molestiae totam non itaque illo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta quia nesciunt aspernatur nobis sit nostrum esse doloremque enim voluptas tenetur odio atque porro iusto, animi debitis natus labore neque consectetur?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio minus molestiae quam praesentium expedita quas blanditiis eius odit fugiat a maiores quisquam delectus, eligendi cumque provident voluptas aperiam perferendis magnam? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus laudantium harum laborum ex! Deleniti omnis vel, ipsam dignissimos adipisci doloribus quia nemo. Reiciendis maiores, rem molestiae totam non itaque illo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta quia nesciunt aspernatur nobis sit nostrum esse doloremque enim voluptas tenetur odio atque porro iusto, animi debitis natus labore neque consectetur?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio minus molestiae quam praesentium expedita quas blanditiis eius odit fugiat a maiores quisquam delectus, eligendi cumque provident voluptas aperiam perferendis magnam? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus laudantium harum laborum ex! Deleniti omnis vel, ipsam dignissimos adipisci doloribus quia nemo. Reiciendis maiores, rem molestiae totam non itaque illo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta quia nesciunt aspernatur nobis sit nostrum esse doloremque enim voluptas tenetur odio atque porro iusto, animi debitis natus labore neque consectetur?
+
+
+            
 
         </p>
     </main>
