--- a/exercicios/ex022/fundo007.html
+++ b/exercicios/ex022/fundo007.html
@@ -7,20 +7,28 @@
     <title>Alinhamento vertical</title>
     <style>
         #container{
+            background-image: url(imagens/target001.png);
+            background-size: 100% 100%;
+
             position: relative;
-            height: 500px;
+            height: 96vh;
             background-color: purple;
             padding: 10px;
         }
 
         #conteudo{
+            background-image: url(imagens/target001.png);
+            background-size: 100% 100%;
+           
             position: absolute;
             height: 200px;
             width: 400px;
             background-color: yellow;
 
-            left: 50%px;
-            top: 50%px;
+            left: 50%;
+            top: 50%;
+
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
