--- a/desafios/desafios/desafio-12.html
+++ b/desafios/desafios/desafio-12.html
@@ -12,7 +12,7 @@
         }
 
         table {
-            width: 200px;
+            width: 400px;
             border-collapse: collapse;
         } 
 
@@ -67,8 +67,8 @@
             <td>0.0</td>
         </tr>
         <tr>
-            <td colspan="4" style="text-align: left;">Média de Exatas</td>
-            <td>0.0</td>
+            <td colspan="4" style="text-align: left;" class="cinza"><strong>Média de Exatas</strong></td>
+            <td class="cinza"><strong>0.0</strong></td>
         </tr>
         <tr>
             <td rowspan="2"><strong>Humanas</strong></td>
@@ -84,8 +84,8 @@
             <td>0.0</td>
         </tr>
         <tr>
-            <td colspan="4" style="text-align: left;">Média de Humanas</td>
-            <td>0.0</td>
+            <td colspan="4" style="text-align: left;" class="cinza"><strong>Média de Humanas</strong></td>
+            <td class="cinza"><strong>0.0</strong></td>
         </tr>
     </table>
 </body>
