--- a/exercicios/ex023/tabela004.html
+++ b/exercicios/ex023/tabela004.html
@@ -26,12 +26,16 @@
             padding: 8px;
         }
 
-        tr.destaque {
+        col.cnome {
             background-color: chartreuse;
         }
 
-        col.cnome {
-            background-color: chartreuse;
+        .amarelo {
+            background-color: yellow;
+        }
+
+        .vermelho {
+            background-color: red;
         }
     </style>
 </head>
@@ -40,10 +44,10 @@
 
     <table>
         <colgroup>
-            <col class="cnome">
-            <col class="csexo">
-            <col class="cidade">
-            <col class="cprof">
+            <col class="amarelo">
+            <col class="vermelho">
+            <col class="amarelo">
+            <col class="vermelho">
         </colgroup>
         <caption>Cadastro</caption>
         <tr>
