exercício de iframe

--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -5,12 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uso de iframe</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        iframe#tela {
+            width: 95vw;
+            height: 400px;
+            border: 2px solid black;
+
+
+        }
+    </style>
 </head>
 <body>
     <h1>Faça uma escolha</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nulla, modi ad quaerat provident ducimus veritatis tempora porro dolore consequatur excepturi assumenda in deleniti repudiandae rem adipisci. Deleniti, quisquam blanditiis!</p>
     
+    <ul>
+        <li><a href="paginas-extras/pag001.html" target="frame">Primeira página</a></li>
+        <li><a href="paginas-extras/pag002.html" target="frame">Segunda página</a></li>
+        <li><a href="paginas-extras/pag003.html" target="frame">Terceira página</a></li>
+    </ul>
+
+
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At inventore nihil quasi sunt, asperiores quo temporibus qui modi voluptatibus tenetur tempora similique ducimus, unde incidunt voluptate doloremque earum cupiditate officiis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt accusantium ducimus placeat iusto! Velit, consectetur placeat amet at excepturi quaerat ratione assumenda magnam nemo doloribus? Ducimus voluptatem et eius suscipit.</p>
+
+    <iframe src="" id="tela" name="frame">
+        <p>Infelizmente seu navegador não é compatível com isso.</p>
+    </iframe>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae esse porro quasi quae magnam eveniet reiciendis, veritatis unde fuga veniam earum cupiditate eaque, facilis autem? Sunt eligendi possimus obcaecati voluptatum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quis ipsa mollitia, cum corrupti error voluptas fugiat ullam velit voluptates totam exercitationem magni, odio dolor autem delectus, enim ea! Odit!</p>
     
 </body>
 </html>
