--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -32,7 +32,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At inventore nihil quasi sunt, asperiores quo temporibus qui modi voluptatibus tenetur tempora similique ducimus, unde incidunt voluptate doloremque earum cupiditate officiis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt accusantium ducimus placeat iusto! Velit, consectetur placeat amet at excepturi quaerat ratione assumenda magnam nemo doloribus? Ducimus voluptatem et eius suscipit.</p>
 
-    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio modi repellat quo amet harum consequuntur, voluptatibus suscipit architecto minima qui mollitia quis ullam eos porro quod veniam unde pariatur assumenda.</p>">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio modi repellat quo amet harum consequuntur, voluptatibus suscipit architecto minima qui mollitia quis ullam eos porro quod veniam unde pariatur assumenda.</p><img src='imagens/maocel.png'</iframe>>
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
 
