--- a/exercicios/ex025/form001.html
+++ b/exercicios/ex025/form001.html
@@ -10,37 +10,20 @@
             font-family: Arial, Helvetica, sans-serif;
 
         }
-
-        .quadrado {
-            width: 100px;
-            height: 100px;
-            background-color: red;
-            color: white;
-
-            display: flex; /* Ativa o Flexbox para centralizar o conteúdo */
-            justify-content: center; /* Centraliza horizontalmente */
-            align-items: center; /* Centraliza verticalmente */
-            text-align: center; /* Centraliza o texto */
-
-         }
-
-         .quadrado :hover {
-            background-color: blue;
-         }
             
         
     </style>
 </head>
 <body>
     <h1>Meu primeiro formulário</h1>
-    <form>
-        <p>Nome: <input type="text" name="nome" id="nome"></p>
-        <p>Sobrenome: <input type="text" name="sobrenome" id="sobrenome"></p>
+    <form action="cadastro.php" autocomplete="off">
+        <p><label for="inome">Nome:</label> 
+            <input type="text" name="nome" id="inome"></p>
+        <p><label for="isobrenome">Sobrenome:</label> 
+            <input type="text" name="sobrenome" id="isobrenome"></p>
         <p><input type="submit" value="Enviar"></p>
     </form>
-    <div class="quadrado">
-        <p>Pare</p> 
-    </div>
+
 
 </body>
 </html>
