--- a/exercicios/ex025/form002.html
+++ b/exercicios/ex025/form002.html
@@ -11,11 +11,11 @@
     <form action="cadastro.php" method="post">
         <p>
             <label for="iusu">Usuário:</label>
-            <input type="text" name="usu" id="iusu" autocomplete="off" required minlength="5" maxlength="30" size="10" placeholder="nome do usuário">
+            <input type="text" name="usu" id="iusu" autocomplete="on" required minlength="5" maxlength="30" size="11" placeholder="nome do usuário">
         </p>
         <p>
             <label for="isen">Senha:</label>
-            <input type="password" name="sen" id="isen" required minlength="8" maxlength="20" size="8">
+            <input type="password" name="sen" id="isen" required minlength="8" maxlength="20" size="10" placeholder="mínimo 8 letras" autocomplete="current-password">
         </p>
         <p>
             <input type="submit" value="Enviar">
