--- a/exercicios/ex026/mq001/index.html
+++ b/exercicios/ex026/mq001/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/tela.css" media="screen">
+    <link rel="stylesheet" href="estilos/impressora.css" media="print">
 </head>
 <body>
-    
+    <header>
+        <h1>Noticias</h1>
+        <menu>
+            <ul>
+                <li>Esportes</li>
+                <li>Política</li>
+                <li>Tecnologia</li>
+            </ul>
+        </menu>
+    </header>
+    <main>
+        <article>
+            <h2>Estou aprendendo a criar Media Querries</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia rem pariatur, dolor minus aliquam dolores corporis omnis. Natus, exercitationem quisquam. Porro veritatis molestiae eveniet iure fugiat eligendi culpa ea necessitatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nostrum accusantium suscipit adipisci neque, perferendis laborum repellat! Vitae inventore deleniti cum unde nobis consequatur impedit perferendis, nostrum aperiam, quas nihil?
+            </p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sit officia ullam, quia qui provident? Libero reiciendis iste accusamus obcaecati, voluptas ipsum illum sunt? Quibusdam, nihil itaque. Dolorum, sapiente laboriosam? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel vero ut debitis officia tenetur! At quae fuga quod ut rerum, eum sapiente placeat possimus dolores tempora harum ad, alias cupiditate.</p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur provident temporibus illum placeat sequi sed id! Laudantium iure, at hic suscipit ipsam ipsum modi nisi aperiam. Debitis est dolorem eveniet!</p>
+        </article>
+    </main>
 </body>
 </html>
